--- a/tens.html
+++ b/tens.html
@@ -6,8 +6,15 @@
   </head>
   <body>
     <script>
-    for (var i = 100; i >= 100; i = i - 10) {
-    console.log(i) }
+    for (var i = 100; i >= 0; i = i - 10) {
+    if (i === 50) {
+      console.log ()
+    }
+else (
+  console.log(i)
+)
+
+  }
     </script>
 
   </body>
