--- a/fizzbuzz.html
+++ b/fizzbuzz.html
@@ -6,15 +6,22 @@
   </head>
   <body>
     <script>
-    for (i = 0; i > 100; i = i + 1) {
-      if (i == 3) {
-      console.log(fizz)
-      }
-      else if (i == 5)
-      console.log(fizz)
-      else if (i == 6)
-      console.log(fizz)
+    for (i = 1; i <= 100; i = i + 1) {
+      if (i % 3 === 0 && i % 5 === 0)  {
+      console.log("fizzbuzz") }
 
+      else if (i % 3 === 0)
+       {
+      console.log("fizz")
+      }
+      else if (i % 5 ===0) {
+      console.log("buzz")
+    }
+
+
+
+      else {console.log(i)}
+}
 
     </script>
 
